# JNI_test_01

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dwyane/jni01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: P2Pclient.h  native-lib.cpp  p2pclient.c  proto.h  test.h  test_tony.c
app/src/main/java/com/dwyane/jni01/: MainActivity.java  NativeManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dwyane/jni01/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
